Change logging to use category

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -119,3 +119,6 @@ log_trades          = false
 log_tailor          = false
 log_scripts         = false
 log_scenegraph      = false
+log_stores          = false
+log_tasks           = false
+log_rpc             = false
