Correct setting value to be consistent
The value for server_type was shown as both 'websocket' and 'websockets'. Chaged all to be 'websocket'. Also changed comments referencing original use of websockets to generic RPC.

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -52,7 +52,7 @@ location_addr           = 127.0.0.1:2106
 #  location_addr  Can be any valid IP and port combination
 #                 for the server.
 #
-#  server_type    Can be either 'websockets' or 'tcp'.
+#  server_type    Can be either 'websocket' or 'tcp'.
 #                 DEFAULT: tcp
 #
 ##############################################################
