--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -12,13 +12,14 @@
 #      for example: 10.0.0.2
 #
 #    Default ports are listed below:
-#      AccountDatabase db_port:		5432
-#      CharacterDatabase db_port:	5432
-#      AuthServer location_addr:	2106
-#      GameServer listen_addr:		7002
-#      GameServer location_addr:	7002
-#      MapServer listen_addr:		7003
-#      MapServer location_addr:		7003
+#      AccountDatabase      db_port:            5432
+#      CharacterDatabase    db_port:            5432
+#      AuthServer           location_addr:      2106
+#      GameServer           listen_addr:        7002
+#      GameServer           location_addr:      7002
+#      MapServer            listen_addr:        7003
+#      MapServer            location_addr:      7003
+#      AdminRPC             location_addr:      6001
 #
 ##############################################################
 
@@ -38,6 +39,27 @@ CharacterDatabase\db_pass   = segs123
 
 [AuthServer]
 location_addr           = 127.0.0.1:2106
+
+##############################################################
+#    AdminRPC is the JSON-RPC server. It supports TCP and
+#    Websocket connections, using TCP by default.
+#
+#    Uncommenting the following section and setting the
+#    parameters will allow the RPC server to listen on an
+#    alternative interface IP address and port. The server type
+#    can be changed as well. 
+# 
+#  location_addr  Can be any valid IP and port combination
+#                 for the server.
+#
+#  server_type    Can be either 'websocket' or 'tcp'.
+#                 DEFAULT: tcp
+#
+##############################################################
+
+#[AdminRPC]
+#location_addr           = 127.0.0.1:6001
+#server_type             = tcp
 
 [GameServer] 
 listen_addr             = 127.0.0.1:7002
@@ -97,3 +119,6 @@ log_trades          = false
 log_tailor          = false
 log_scripts         = false
 log_scenegraph      = false
+log_stores          = false
+log_tasks           = false
+log_rpc             = false
