--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -30,13 +30,13 @@ config_version     = 1
 AccountDatabase\db_driver   = QSQLITE
 AccountDatabase\db_host     = 127.0.0.1
 AccountDatabase\db_port     = 5432
-AccountDatabase\db_name     = segs
+AccountDatabase\db_name     = segs.db
 AccountDatabase\db_user     = segsadmin
 AccountDatabase\db_pass     = segs123
 CharacterDatabase\db_driver = QSQLITE
 CharacterDatabase\db_host   = 127.0.0.1
 CharacterDatabase\db_port   = 5432
-CharacterDatabase\db_name   = segs_game
+CharacterDatabase\db_name   = segs_game.db
 CharacterDatabase\db_user   = segsadmin
 CharacterDatabase\db_pass   = segs123
 
@@ -73,7 +73,7 @@ max_character_slots     = 8
 [MapServer]  
 listen_addr             = 127.0.0.1:7003
 location_addr           = 127.0.0.1:7003
-maps                    = DefaultMapInstances
+maps                    = maps
 player_fade_in          = 380.0
 motd_timer              = 3600.0
 costume_slot_unlocks    = "19, 29, 39, 49"
@@ -114,7 +114,9 @@ log_chat            = false
 log_infomsg         = false
 log_emotes          = true
 log_target          = false
-log_spawn           = false
+log_charsel         = false
+log_playerspawn     = false
+log_npcspawn        = false
 log_mapevents       = true
 log_mapxfers        = false
 log_slashcommand    = true
