Adds option for ticks per second. Default is 30. 0 errors, and over 100 acts strange. Added ui for setting and saving ticks per second option with reasonable minimum and maximum. The faster the tick rate, the more updates are pushed per second, pretty straightforward.

--- a/Projects/CoX/Data/settings_template.cfg
+++ b/Projects/CoX/Data/settings_template.cfg
@@ -97,6 +97,9 @@ xp_mod_multiplier  = 2
 xp_mod_startdate   = 1/1/2000 12:00 AM
 xp_mod_enddate     = 1/1/2000 12:00 AM
 
+[Experimental]
+world_update_ticks_per_sec = 30
+
 [Logging]
 combine_logs        = false
 log_generic         = *.debug=true\nqt.*.debug=false
