--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
-PROJECT(SEGS)
+cmake_minimum_required(VERSION 3.8)
+project(SEGS)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -27,15 +27,15 @@ endif()
 
 # version number
 set(SEGS_VERSION_MAJOR "0")
-set(SEGS_VERSION_MINOR "6")
-set(SEGS_VERSION_PATCH "1")
+set(SEGS_VERSION_MINOR "7")
+set(SEGS_VERSION_PATCH "0")
 
 # If SEGS is not built from a Git repository, default the version info to
 # reasonable values.
 if(NOT SEGS_REVISION)
-  set(SEGS_DESCRIPTION "${SEGS_VERSION_MAJOR}.${SEGS_VERSION_MINOR}.${SEGS_VERSION_PATCH}")
-  set(SEGS_REVISION "${SEGS_DESCRIPTION} (no further info)")
-  set(SEGS_BRANCH "develop")
+    set(SEGS_DESCRIPTION "${SEGS_VERSION_MAJOR}.${SEGS_VERSION_MINOR}.${SEGS_VERSION_PATCH}")
+    set(SEGS_REVISION "${SEGS_DESCRIPTION} (no further info)")
+    set(SEGS_BRANCH "develop")
 endif()
 
 add_definitions(
@@ -44,37 +44,37 @@ add_definitions(
     "-DSEGS_DESCRIPTION=\"${SEGS_DESCRIPTION}\""
     )
 
-IF(MSVC)
+if(MSVC)
     add_definitions( -D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_WARNINGS -DNOMINMAX -D_USE_MATH_DEFINES)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
-ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast -std=c++14")
-
-   if(MINGW)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
-   endif()
-ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast -std=c++14 -Wno-nested-anon-types -Wno-gnu-anonymous-struct -Wno-gnu-zero-variadic-macro-arguments")
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast")
+    if(MINGW)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wa,-mbig-obj")
+    endif()
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Wuseless-cast -Wno-nested-anon-types -Wno-gnu-anonymous-struct -Wno-gnu-zero-variadic-macro-arguments")
 endif()
+
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set(AUTOGEN_TARGETS_FOLDER ON)
 
 add_definitions(-D__STDC_FORMAT_MACROS)
 
-SET(MAIN_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/3rd_party/include CACHE PATH "Includes")
-SET(MAIN_LIB_PATH ${PROJECT_SOURCE_DIR}/3rd_party/lib CACHE PATH "Libraries")
+set(MAIN_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/3rd_party/include CACHE PATH "Includes")
+set(MAIN_LIB_PATH ${PROJECT_SOURCE_DIR}/3rd_party/lib CACHE PATH "Libraries")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
-SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/out)
-SET(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
-SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
-SET(UNICODE TRUE)
+set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/out)
+set(CMAKE_INCLUDE_PATH ${MAIN_INCLUDE_PATH})
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts;${CMAKE_MODULE_PATH})
+set(UNICODE TRUE)
 set(INSTALLED_TARGETS)
-OPTION(ENABLE_SCRIPTING_ENGINE "Build experimental scripting engine ?" ON)
-OPTION(ENABLE_TESTS "Enable testing unit and functional tests" OFF)
-OPTION(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
-OPTION(BUILD_RPC_TEST_CLIENT "Build RPC Test Client ?" OFF)
+option(ENABLE_SCRIPTING_ENGINE "Build experimental scripting engine ?" ON)
+option(ENABLE_TESTS "Enable testing unit and functional tests" OFF)
+option(BUILD_COX_MAP_VIEWER "Build CoX map file viewer ?" OFF)
+option(BUILD_RPC_TEST_CLIENT "Build RPC Test Client ?" OFF)
 
 ########################################################################################
 # Prerequisites
